# Thirteen-Oracles-Of-Astraeum

./: .env.example  .gitignore  AGENT_DESIGN.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  GAME_MECHANICS.md  License  README.md  SETUP.md  index.html
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  aresion_agent.py  athenaia_agent.py  base_oracle.py  boreas_agent.py  chronos_agent.py  delphix_agent.py  echo_agent.py  gaia_agent.py  helios_agent.py  nyx_agent.py  orchestrator.py  proteus_agent.py  selene_agent.py  themis_agent.py  typhon_agent.py
backend/app/events/: __init__.py  kafka_consumer.py  kafka_producer.py  redis_pubsub.py
backend/app/llm/: __init__.py  adapter.py  prompts.py
backend/app/memory/: __init__.py  vector_store.py
backend/app/models/: __init__.py  army.py  game_state.py  oracle.py  player.py
backend/app/routes/: __init__.py  assets.py  auth.py  game.py  oracle.py
backend/app/services/: __init__.py  auth_service.py  combat_service.py  game_service.py  puzzle_service.py  storage_service.py
backend/app/utils/: __init__.py  helpers.py  validators.py
backend/app/websocket/: __init__.py  manager.py
backend/configs/agents/: aresion.yaml  athenaia.yaml  boreas.yaml  chronos.yaml  delphix.yaml  echo.yaml  gaia.yaml  helios.yaml  nyx.yaml  proteus.yaml  selene.yaml  themis.yaml  typhon.yaml
backend/configs/game/: weapons.yaml  (+2 more)
backend/tests/: __init__.py  test_agents.py  test_api.py  test_game_logic.py
(+56 files in other folders)
