### File: backend/pyproject.toml

[tool.poetry]
name = "astraeum-backend"
version = "1.0.0"
description = "Backend for Thirteen Oracles of Astraeum"
authors = ["Your Team"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
